--- a/src/main/resources/templates/basic/regist.html
+++ b/src/main/resources/templates/basic/regist.html
@@ -1,104 +1,115 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입페이지</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>회원가입페이지</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+		crossorigin="anonymous"></script>
 </head>
+
 <body>
 
-<h2>회원 가입</h2>
-
-<form action="/regist" method="post">
-    <div class="row g-3 align-items-center">
-        <div class="col-auto">
-          <label for="inputPassword6" class="col-form-label">아이디 : </label>
-        </div>
-        <div class="col-auto">
-          <input type="text" id="inputPassword6" name="userId" class="form-control" aria-describedby="passwordHelpInline" required>
-        </div>
-      </div>
-    <div class="row g-3 align-items-center">
-        <div class="col-auto">
-          <label for="inputPassword6" class="col-form-label">비밀번호 : </label>
-        </div>
-        <div class="col-auto">
-          <input type="password" id="inputPassword6" name="password" class="form-control" aria-describedby="passwordHelpInline" required>
-        </div>
-        <div class="col-auto">
-          <span id="passwordHelpInline" class="form-text">
-            당신의 비밀번호는 8~20 글자 길이이며 영어와 숫자를 사용할수있지만 공백과 특수문자, 이모티콘은 사용할수 없습니다.
-          </span>
-        </div>
-      </div>
-    <!-- 비밀번호 입력  <input type="password" id="inputPassword5" name="password" class="form-control" aria-describedby="passwordHelpBlock">
+	<form action="/regist" method="post">
+		<div class="row g-3 align-items-center">
+			<div class="col-auto">
+				<label for="inputPassword6" class="col-form-label">아이디 : </label>
+			</div>
+			<div class="col-auto">
+				<input type="text" id="inputPassword6" name="userId" class="form-control"
+					aria-describedby="passwordHelpInline" required>
+			</div>
+		</div>
+		<div class="row g-3 align-items-center">
+			<div class="col-auto">
+				<label for="inputPassword6" class="col-form-label">비밀번호 : </label>
+			</div>
+			<div class="col-auto">
+				<input type="password" id="inputPassword6" name="password" class="form-control"
+					aria-describedby="passwordHelpInline" required>
+			</div>
+			<div class="col-auto">
+				<span id="passwordHelpInline" class="form-text">
+					당신의 비밀번호는 8~20 글자 길이이며 영어와 숫자를 사용할수있지만 공백과 특수문자, 이모티콘은 사용할수 없습니다.
+				</span>
+			</div>
+		</div>
+		<!-- 비밀번호 입력  <input type="password" id="inputPassword5" name="password" class="form-control" aria-describedby="passwordHelpBlock">
     <div id="passwordHelpBlock" class="form-text">
         당신의 비밀번호는 8~20 글자 길이이며 영어와 숫자를 사용할수있지만 공백과 특수문자, 이모티콘은 사용할수 없습니다.
     </div>     -->
-    <div class="row g-3 align-items-center">
-        <div class="col-auto">
-          <label for="inputPassword6" class="col-form-label">이름 : </label>
-        </div>
-        <div class="col-auto">
-          <input type="text" id="inputPassword6" name="name" class="form-control" aria-describedby="passwordHelpInline" required>
-        </div>
-      </div>
-      <div class="row g-3 align-items-center">
-        <div class="col-auto">
-          <label for="inputPassword6" class="col-form-label">전화번호 : </label>
-        </div>
-        <div class="col-auto">
-          <input type="text" id="inputPassword6" name="phone" class="form-control" aria-describedby="passwordHelpInline" required>
-        </div>
-      </div>
-      <div class="row g-3 align-items-center">
-        <div class="col-auto">
-          <label for="inputPassword6" class="col-form-label">주소 : </label>
-        </div>
-        <div class="col-auto">
-          <input type="text" id="inputPassword6" name="address" class="form-control" aria-describedby="passwordHelpInline" required>
-        </div>
-      </div>
+		<div class="row g-3 align-items-center">
+			<div class="col-auto">
+				<label for="inputPassword6" class="col-form-label">이름 : </label>
+			</div>
+			<div class="col-auto">
+				<input type="text" id="inputPassword6" name="name" class="form-control"
+					aria-describedby="passwordHelpInline" required>
+			</div>
+		</div>
+		<div class="row g-3 align-items-center">
+			<div class="col-auto">
+				<label for="inputPassword6" class="col-form-label">전화번호 : </label>
+			</div>
+			<div class="col-auto">
+				<input type="text" id="inputPassword6" name="phone" class="form-control"
+					aria-describedby="passwordHelpInline" required>
+			</div>
+		</div>
+		<div class="row g-3 align-items-center">
+			<div class="col-auto">
+				<label for="inputPassword6" class="col-form-label">주소 : </label>
+			</div>
+			<div class="col-auto">
+				<input type="text" id="inputPassword6" name="address" class="form-control"
+					aria-describedby="passwordHelpInline" required>
+			</div>
+		</div>
 
-      <div class="row g-3 align-items-center">
-        <div class="col-auto">
-          <label for="inputPassword6" class="col-form-label">이메일 : </label>
-        </div>
-        <div class="col-auto">
-          <input type="email" id="inputPassword6" name="email" class="form-control" aria-describedby="passwordHelpInline" required>
-        </div>
-      </div>
+		<div class="row g-3 align-items-center">
+			<div class="col-auto">
+				<label for="inputPassword6" class="col-form-label">이메일 : </label>
+			</div>
+			<div class="col-auto">
+				<input type="email" id="inputPassword6" name="email" class="form-control"
+					aria-describedby="passwordHelpInline" required>
+			</div>
+		</div>
 
-      <div class="row g-3 align-items-center">
-        <div class="col-auto">
-          <label for="inputPassword6" class="col-form-label">깃 주소 : </label>
-        </div>
-        <div class="col-auto">
-          <input type="text" id="inputPassword6" name="gitAddress" class="form-control" aria-describedby="passwordHelpInline" required>
-        </div>
-      </div>
+		<div class="row g-3 align-items-center">
+			<div class="col-auto">
+				<label for="inputPassword6" class="col-form-label">깃 주소 : </label>
+			</div>
+			<div class="col-auto">
+				<input type="text" id="inputPassword6" name="gitAddress" class="form-control"
+					aria-describedby="passwordHelpInline" required>
+			</div>
+		</div>
 
-      <div class="row g-3 align-items-center">
-        <div class="col-auto">
-          <label for="inputPassword6" class="col-form-label">생년월일 : </label>
-        </div>
-        <div class="col-auto">
-          <input type="date" id="inputPassword6" name="birth" class="form-control" aria-describedby="passwordHelpInline" required>
-        </div>
-      </div>
-      <select class="form-select form-select-lg mb-3" aria-label="Large select example" id="gender" name="gender" required style="width: 100px;">
-        <option value="true">남자</option>
-        <option value="false">여자</option>
-      </select>
+		<div class="row g-3 align-items-center">
+			<div class="col-auto">
+				<label for="inputPassword6" class="col-form-label">생년월일 : </label>
+			</div>
+			<div class="col-auto">
+				<input type="date" id="inputPassword6" name="birth" class="form-control"
+					aria-describedby="passwordHelpInline" required>
+			</div>
+		</div>
+		<select class="form-select form-select-lg mb-3" aria-label="Large select example" id="gender" name="gender"
+			required style="width: 100px;">
+			<option value="true">남자</option>
+			<option value="false">여자</option>
+		</select>
 
-      <button type="submit" class="btn btn-outline-secondary">회원가입</button>
-      <a href="/"><button type="button" class="btn btn-outline-danger">취소</button></a>
-</form>
+		<button type="submit" class="btn btn-outline-secondary">회원가입</button>
+		<a href="/"><button type="button" class="btn btn-outline-danger">취소</button></a>
+	</form>
 
 </body>
+
 </html>
