--- a/src/main/resources/templates/basic/layout.html
+++ b/src/main/resources/templates/basic/layout.html
@@ -2,19 +2,28 @@
   <head>
     <meta charset="UTF-8" />
     <title th:text="${title}"></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/styles/index.css" />
     <head th:replace="~{/basic/header :: headerFragmentHead}"></head>
+    <head th:replace="~{/basic/modal :: modalFragmentHead}"></head>
     <head th:replace="~{${path} :: ${contentHead}}"></head>
   </head>
   <body>
     <div id="root">
-      <div id="header" th:replace="~{/basic/header :: headerFragment(loginError=${loginError})}"></div>
+      <div id="header" th:replace="~{/basic/header :: headerFragment}"></div>
       <div id="menu"></div>
       <div id="content" th:insert="~{${path} :: ${content}}"></div>
+      <div id="modal" th:replace="~{/basic/modal :: modalFragment}"></div>
     </div>
   </body>
-</html>
+</html> 
