-c231123 수업내용및 페이지기능 글상세보기 수정 삭제

--- a/src/main/resources/templates/board/index.html
+++ b/src/main/resources/templates/board/index.html
@@ -1,31 +1,49 @@
-<html lang="ko" mxlns:th="http:/www.thymeleaf.org">
+
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="boardFragmentHead">
     <link rel="stylesheet" href="/styles/index.css" />
 </head>
 <body>
     <div th:fragment="boardFragment" class="board container">
-      <div id="add" th:replace="~{/board/add :: addFragment}"></div>
-        <h2>게시판 목록
+        <div id="add" th:replace="~{/board/add :: addFragment}"></div>
+        <h2>
+            게시판 목록
             <small class="text-muted" th:text="${#lists.size(boards)} + '개의 게시물'"></small>
         </h2>
         <table class="table">
             <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">제목</th>
-                <th scope="col">작성자</th>
-                <th scope="col">작성일자</th>
-              </tr>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">제목</th>
+                    <th scope="col">작성자</th>
+                    <th scope="col">작성일자</th>
+                </tr>
             </thead>
             <tbody>
-              <tr th:each="board, iterStat : ${boards}" th:object="${board}">
-                <th scope="row" th:text="${iterStat.count}"></th>
-                <td th:text="*{title}">Mark</td>
-                <td th:text="${userList[iterStat.index]}"></td>
-                <td th:text="*{createdAt}">@mdo</td>
-            </tr>
+                <tr th:each="board, iterStat : ${boards}" th:object="${board}">
+                    <th scope="row" th:text="${iterStat.count}"></th>
+                    <td>
+                      <a th:href="@{'/detail/' + *{id}}" th:text="*{title}"></a>
+                  </td>
+                    <td th:text="*{userName}"></td>
+                    <td th:text="*{createdAt}"></td>
+                </tr>
             </tbody>
-          </table>
+        </table>
+        <div class="pagination">
+            <ul>
+                <li th:if="*{currentPage > 1}">
+                  <a th:href="@{'/?page=' + *{currentPage - 1}}">이전</a>
+                </li>
+                <li th:each="pageNumber : *{#numbers.sequence(1, totalPages)}" 
+                    th:classappend="${pageNumber == currentPage} ? 'active' : ''">
+                    <a th:href="@{'?page=' + *{pageNumber}}" th:text="${pageNumber}"></a>
+                </li>
+                <li th:if="*{currentPage < totalPages}">
+                  <a th:href="@{'/?page=' + *{currentPage + 1}}">다음</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
